# simd_cells

./: .gitignore  Cargo.toml  Readme.md
data/: textures.json
src/: constants.rs  engine.rs  main.rs  map.rs  sim.rs  test.rs  texture_cache.rs
src/engine/: entities.rs  map.rs  texture_cache.rs  texture_map.rs  timers.rs  traits.rs  types.rs
src/sim/: critter.rs  food.rs  settings.rs  systems.rs
src/sim/systems/: spawning.rs
src/templatey_stuff/: critter.rs  main_imgui_gl.rs
