[package]
name = "simd_cells"
version = "0.1.0"
edition = "2024"



[dependencies]
dear-imgui-rs = "0.8.0"
# egui_glow = "0.33.3"
fastrand = "2.3.0"
glow = "0.16.0"
hecs = { path = "hecs", features = ["macros"]}
imgui = "0.12.0"
imgui-glow-renderer = "0.13.0"
imgui-sdl2-support = "0.13.0"
lru = "0.16.3"
serde_json = "1.0.149"


[dependencies.sdl2]
version = ">=0.36.0"
features = ["ttf"]
# default-features = false
# features = ["unsafe_textures"]

# [dependencies.dear-imgui-sys]
# version = "~0.8.0"
# features = ["prebuilt"]

# [dependencies.egui]
# version = "^0.33"

# [dependencies.egui-sdl2]
# version = "^0.2.5"
# default-features = false
# features=["sdl2-sys", "egui_glow", "glow-backend"]


